@@ -1,3 +1,8 @@
+2002-12-26  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/imm.h (ImmGetCompositionFont[AW],
+	ImmSetCompositionFont[AW]): Add NOGDI guard.
+
 2002-12-19  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/ddk/hidusage.h: Remove unneccessary #pragma pack's.
